# telemetria-minerva

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: pubspec.yaml
app/assets/manuals/: netuno-conservacao.md  netuno-procedimentos.md
app/assets/models/: minerva_tug.glb  minerva_tug.mesh
app/lib/: api_client.dart  main.dart  models.dart  qr_login.dart
app/lib/screens/: fleet_screen.dart  login_screen.dart  manuals_screen.dart  mission_planner_screen.dart  qr_login_scanner.dart  telemetry_screen.dart
app/lib/widgets/: boat_attitude_view.dart  minerva_logo.dart  (+3 more)
app/test/: models_test.dart  qr_login_test.dart  widget_test.dart
app/tool/: build_boat_mesh.py  configure_platforms.py
backend/minerva_api/: app.py  auth.py  cli.py  store.py
deploy/: .env.example  Dockerfile  docker-compose.yml
deploy/systemd/: minerva-boat.service
docs/: ATRIBUICOES.md  aplicativos.md  arquitetura.md  autonomia.md  bom.md  hardware.md  manual-azimutal-conservacao.md  manual-azimutal-procedimentos.md  mock-dois-barcos.md  operacao.md  teste-campo.md
firmware/mega/: platformio.ini
protocol/: telemetry.schema.json
scripts/: minerva_web_gateway.py  run_api_secure.sh  run_local_stack.sh
shared/minerva_protocol/: __init__.py  frame.py  lora.py  mission.py  model.py
tests/: conftest.py  test_backend.py  test_captain_features.py  test_edge.py  test_lora.py  test_protocol.py  test_rak3172.py  test_recording_inactivity.py  test_route_execution_modes.py  test_route_safety.py  test_vessel_autopilot.py
tools/: generate_access_credentials.py
(+12 files in other folders)
