[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetria-minerva"
version = "0.1.0"
description = "Servicos de bordo, gateway e backend da telemetria Minerva Nautica"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "pyserial>=3.5,<4",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[project.scripts]
minerva-boat = "minerva_boat.cli:main"
minerva-simulator = "minerva_boat.simulator:main"
minerva-api = "minerva_api.cli:main"

[tool.setuptools.packages.find]
where = ["shared", "edge/boat", "backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

